<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout android:orientation="vertical"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.formcadastro.FormCadastro"

        android:background="@color/light_gray"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_form_login"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"/>

        <EditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:maxLines="1"
            android:inputType="textEmailAddress"
            android:hint="@string/email_field"
            android:background="@color/white"/>

        <EditText
            android:id="@+id/edit_senha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:inputType="numberPassword"
            android:hint="@string/senha_field"
            android:background="@color/white"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entrar_login_btn"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:padding="15dp"
            android:backgroundTint="@color/black"
            android:layout_margin="20dp"
            />

        <TextView
            android:id="@+id/txt_tela_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_final_txt"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"/>

    </LinearLayout>
</ScrollView>